// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`effectsThemePlugin create theme data with one theme which doesn't exist in figma should create css files with css variables: /export-path/effects/dark-blue/vars.css 1`] = `
"
[data-theme='dark-blue'] {
  --sh-bg-blur-100: '';
--sh-bg-blur-200: '';
--sh-shadow-100: '';
--sh-shadow-200: '';
--sh-shadow-300: '';
--sh-shadow-400: '';
--sh-shadow-500: '';
--sh-shadow-600: '';
}"
`;

exports[`effectsThemePlugin create theme data with one theme which doesn't exist in figma should create css files with css variables: /export-path/effects/light/vars.css 1`] = `
"
[data-theme='light'] {
  --sh-bg-blur-100: blur(8px);
--sh-bg-blur-200: blur(20px);
--sh-shadow-100: 0px 1px 0px rgba(0, 0, 0, 0.05);
--sh-shadow-200: 0px 1px 0px rgba(0, 0, 0, 0.15);
--sh-shadow-300: 0px 4px -1px rgba(0, 0, 0, 0.15);
--sh-shadow-400: 0px 16px -4px rgba(0, 0, 0, 0.20);
--sh-shadow-500: 0px 16px -8px rgba(0, 0, 0, 0.10);
--sh-shadow-600: 0px 16px -8px rgba(0, 0, 0, 0.40);
}"
`;

exports[`effectsThemePlugin create theme data with one theme which doesn't exist in figma should create css files with css variables: /export-path/effects/monochrome/vars.css 1`] = `
"
[data-theme='monochrome'] {
  --sh-bg-blur-100: '';
--sh-bg-blur-200: '';
--sh-shadow-100: '';
--sh-shadow-200: '';
--sh-shadow-300: '';
--sh-shadow-400: '';
--sh-shadow-500: '';
--sh-shadow-600: '';
}"
`;

exports[`effectsThemePlugin create theme data with one theme which doesn't exist in figma should create css files with css variables: /export-path/effects/vars.css 1`] = `
"
:root {
  --sh-bg-blur-100: '';
--sh-bg-blur-200: '';
--sh-shadow-100: '';
--sh-shadow-200: '';
--sh-shadow-300: '';
--sh-shadow-400: '';
--sh-shadow-500: '';
--sh-shadow-600: '';
}"
`;

exports[`effectsThemePlugin create theme data with one theme which doesn't exist in figma should create js files with css variables: /export-path/effects/dark-blue/index.js 1`] = `
"
    /* eslint-disable max-lines */
    /* eslint-disable @typescript-eslint/naming-convention */
    module.exports = {boxShadow: {},
    }
    "
`;

exports[`effectsThemePlugin create theme data with one theme which doesn't exist in figma should create js files with css variables: /export-path/effects/index.js 1`] = `
"
    /* eslint-disable max-lines */
    /* eslint-disable @typescript-eslint/naming-convention */
    module.exports = {boxShadow: {},
      }
    "
`;

exports[`effectsThemePlugin create theme data with one theme which doesn't exist in figma should create js files with css variables: /export-path/effects/light/index.js 1`] = `
"
    /* eslint-disable max-lines */
    /* eslint-disable @typescript-eslint/naming-convention */
    module.exports = {boxShadow: {"shadow-100":"0px 1px 0px rgba(0, 0, 0, 0.05)","shadow-200":"0px 1px 0px rgba(0, 0, 0, 0.15)","shadow-300":"0px 4px -1px rgba(0, 0, 0, 0.15)","shadow-400":"0px 16px -4px rgba(0, 0, 0, 0.20)","shadow-500":"0px 16px -8px rgba(0, 0, 0, 0.10)","shadow-600":"0px 16px -8px rgba(0, 0, 0, 0.40)"},
    backdropBlur: {"100":"blur(8px)","200":"blur(20px)"}}
    "
`;

exports[`effectsThemePlugin create theme data with one theme which doesn't exist in figma should create js files with css variables: /export-path/effects/monochrome/index.js 1`] = `
"
    /* eslint-disable max-lines */
    /* eslint-disable @typescript-eslint/naming-convention */
    module.exports = {boxShadow: {},
    }
    "
`;

exports[`effectsThemePlugin create theme data with one theme which doesn't exist in figma should create js files with css variables: /export-path/effects/with-vars.js 1`] = `
"
    /* eslint-disable max-lines */
    /* eslint-disable @typescript-eslint/naming-convention */
    module.exports = {boxShadow: {"shadow-100":"var(--sh-shadow-100,'')","shadow-200":"var(--sh-shadow-200,'')","shadow-300":"var(--sh-shadow-300,'')","shadow-400":"var(--sh-shadow-400,'')","shadow-500":"var(--sh-shadow-500,'')","shadow-600":"var(--sh-shadow-600,'')"},
      backdropBlur: {"100":"var(--sh-bg-blur-100,'')","200":"var(--sh-bg-blur-200,'')"}}
    "
`;

exports[`effectsThemePlugin create theme data with one theme which doesn't exist in figma should create theme-list.ts files with themes' types: /export-path/themes-list.ts 1`] = `
"
    /* eslint-disable max-lines */
    /* eslint-disable @typescript-eslint/naming-convention */
    
// THIS FILE IS GENERATED AUTOMATICALLY. DON'T CHANGE IT.

export const DEFAULT_THEME = 'monochrome';

export const THEMES = ['light', 'dark-blue', 'monochrome'] as const;  

export type Theme = typeof THEMES[number];
  
    "
`;

exports[`effectsThemePlugin should create css files with css variables: /export-path/effects/dark/vars.css 1`] = `
"
[data-theme='dark'] {
  --sh-bg-blur-100: blur(8px);
--sh-bg-blur-200: blur(20px);
--sh-shadow-100: 0px 0px 1px rgba(255, 255, 255, 0.10);
--sh-shadow-200: 0px 0px 1px rgba(255, 255, 255, 0.10);
--sh-shadow-300: 0px 0px 1px rgba(255, 255, 255, 0.10);
--sh-shadow-400: 0px 0px 1px rgba(255, 255, 255, 0.20);
--sh-shadow-500: 0px 0px 1px rgba(255, 255, 255, 0.20);
--sh-shadow-600: 0px 0px 1px rgba(255, 255, 255, 0.20);
}"
`;

exports[`effectsThemePlugin should create css files with css variables: /export-path/effects/light/vars.css 1`] = `
"
[data-theme='light'] {
  --sh-bg-blur-100: blur(8px);
--sh-bg-blur-200: blur(20px);
--sh-shadow-100: 0px 1px 0px rgba(0, 0, 0, 0.05);
--sh-shadow-200: 0px 1px 0px rgba(0, 0, 0, 0.15);
--sh-shadow-300: 0px 4px -1px rgba(0, 0, 0, 0.15);
--sh-shadow-400: 0px 16px -4px rgba(0, 0, 0, 0.20);
--sh-shadow-500: 0px 16px -8px rgba(0, 0, 0, 0.10);
--sh-shadow-600: 0px 16px -8px rgba(0, 0, 0, 0.40);
}"
`;

exports[`effectsThemePlugin should create css files with css variables: /export-path/effects/monochrome/vars.css 1`] = `
"
[data-theme='monochrome'] {
  --sh-bg-blur-100: '';
--sh-bg-blur-200: '';
--sh-shadow-100: '';
--sh-shadow-200: '';
--sh-shadow-300: '';
--sh-shadow-400: '';
--sh-shadow-500: '';
--sh-shadow-600: '';
}"
`;

exports[`effectsThemePlugin should create css files with css variables: /export-path/effects/vars.css 1`] = `
"
:root {
  --sh-bg-blur-100: '';
--sh-bg-blur-200: '';
--sh-shadow-100: '';
--sh-shadow-200: '';
--sh-shadow-300: '';
--sh-shadow-400: '';
--sh-shadow-500: '';
--sh-shadow-600: '';
}"
`;

exports[`effectsThemePlugin should create js files with css variables: /export-path/effects/dark/index.js 1`] = `
"
    /* eslint-disable max-lines */
    /* eslint-disable @typescript-eslint/naming-convention */
    module.exports = {boxShadow: {"shadow-100":"0px 0px 1px rgba(255, 255, 255, 0.10)","shadow-200":"0px 0px 1px rgba(255, 255, 255, 0.10)","shadow-300":"0px 0px 1px rgba(255, 255, 255, 0.10)","shadow-400":"0px 0px 1px rgba(255, 255, 255, 0.20)","shadow-500":"0px 0px 1px rgba(255, 255, 255, 0.20)","shadow-600":"0px 0px 1px rgba(255, 255, 255, 0.20)"},
    backdropBlur: {"100":"blur(8px)","200":"blur(20px)"}}
    "
`;

exports[`effectsThemePlugin should create js files with css variables: /export-path/effects/index.js 1`] = `
"
    /* eslint-disable max-lines */
    /* eslint-disable @typescript-eslint/naming-convention */
    module.exports = {boxShadow: {},
      }
    "
`;

exports[`effectsThemePlugin should create js files with css variables: /export-path/effects/light/index.js 1`] = `
"
    /* eslint-disable max-lines */
    /* eslint-disable @typescript-eslint/naming-convention */
    module.exports = {boxShadow: {"shadow-100":"0px 1px 0px rgba(0, 0, 0, 0.05)","shadow-200":"0px 1px 0px rgba(0, 0, 0, 0.15)","shadow-300":"0px 4px -1px rgba(0, 0, 0, 0.15)","shadow-400":"0px 16px -4px rgba(0, 0, 0, 0.20)","shadow-500":"0px 16px -8px rgba(0, 0, 0, 0.10)","shadow-600":"0px 16px -8px rgba(0, 0, 0, 0.40)"},
    backdropBlur: {"100":"blur(8px)","200":"blur(20px)"}}
    "
`;

exports[`effectsThemePlugin should create js files with css variables: /export-path/effects/monochrome/index.js 1`] = `
"
    /* eslint-disable max-lines */
    /* eslint-disable @typescript-eslint/naming-convention */
    module.exports = {boxShadow: {},
    }
    "
`;

exports[`effectsThemePlugin should create js files with css variables: /export-path/effects/with-vars.js 1`] = `
"
    /* eslint-disable max-lines */
    /* eslint-disable @typescript-eslint/naming-convention */
    module.exports = {boxShadow: {"shadow-100":"var(--sh-shadow-100,'')","shadow-200":"var(--sh-shadow-200,'')","shadow-300":"var(--sh-shadow-300,'')","shadow-400":"var(--sh-shadow-400,'')","shadow-500":"var(--sh-shadow-500,'')","shadow-600":"var(--sh-shadow-600,'')"},
      backdropBlur: {"100":"var(--sh-bg-blur-100,'')","200":"var(--sh-bg-blur-200,'')"}}
    "
`;

exports[`effectsThemePlugin should create theme-list.ts files with themes' types: /export-path/themes-list.ts 1`] = `
"
    /* eslint-disable max-lines */
    /* eslint-disable @typescript-eslint/naming-convention */
    
// THIS FILE IS GENERATED AUTOMATICALLY. DON'T CHANGE IT.

export const DEFAULT_THEME = 'monochrome';

export const THEMES = ['light', 'dark', 'monochrome'] as const;  

export type Theme = typeof THEMES[number];
  
    "
`;
